# poppingw

./: README.md  calc_fisher.py  infer.py  infer_spl.py  kappa_population.ipynb  match_filter_likelihood.py  pyproject.toml  requirements.txt  sample_events.py
detectors/: ET_2CE_gwfast.json
example/: total_workflow.sh
poppingw/: __init__.py  cosmology.py  gwfast.py  likelihood.py  redshift_prior.py  selection.py  typing.py  utils.py
poppingw/likelihood/: __init__.py  amplitude.py
